--- a/site-exemplo/style.css
+++ b/site-exemplo/style.css
@@ -1,3 +1,167 @@
 @import url('https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;500;600&family=Josefin+Slab:ital,wght@0,100;0,200;0,300;1,100;1,200;1,300&family=Mulish:ital,wght@0,200;0,300;1,200;1,300&display=swap');
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css");
 
+*{
+    margin: 0;
+    padding: 0;
+}
+
+
+
+/***************botão e menu lateral*/
+a{
+    text-decoration: none;
+}
+
+
+.cont{
+    background-color: #fff;
+    padding: 20px;
+    font-size: 1.2rem;   
+
+}
+.branco{
+    color:#af2525;
+    font-size: 3.0rem;
+    font-family: "Mulish:ital", serif ;
+    float: right;
+
+}
+nav{
+    float: right;
+    height: 100%;
+    width: 0px;
+    background-color: #af2525;
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 1;
+    overflow: hidden;
+}
+
+nav a{
+    color: #fff;
+    font-size: 25px;
+    display: block;
+    padding: 26px 15px 10px 40px;
+    border-radius: 5px;
+}
+
+nav a:hover{
+    background-color: #000;
+    padding: 5px;
+    height: min-content;
+    
+}
+
+
+.social{
+    position: absolute;
+    bottom: 2rem;
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    background-color: #000;
+    
+}
+
+header{
+    width: 100%;
+    height: 100vh;
+    overflow: hidden; 
+    position: relative;
+   
+}
+.img-wrapper{
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background-color: rgba(0,0,0,5);
+}
+
+.img-wrapper img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0.5 ;
+    animation: Zoom 35s;
+}
+
+@keyframes Zoom {
+    0%{
+        transform: scale(1.3);
+    }
+
+    100%{
+        transform: scale(1);
+    }
+}
+
+.banner{
+    position: absolute;
+    top: 30%;
+    left: 15%;
+    
+
+}
+.banner h1{
+    color: #ffffff;
+    font-size: 4.5rem;
+    font-family: "Baloo + 2", serif;
+    font-weight: 300;
+    text-shadow: .3rem .4rem 2px rgba(0,0,0,4);
+    line-height: 6.0rem;
+    margin-bottom: 2rem;
+    opacity: 0;
+    animation: moverBanner 1s 0.8 forwards;
+   
+    
+}
+.banner p{
+    font-family: "Josefin Slab", serif ;
+    font-size: 2.50rem;
+    color: #fff;
+    text-shadow: .2rem .2rem rgba(0,0,0,3);
+    line-height: 3.0rem;
+    margin-bottom: 2rem;
+    opacity: 0;
+    animation: moverBanner 1s 0.8 forwards;
+   
+}
+
+.banner button{
+    font-family: "Mulish:ital", serif;
+    color: #fff;
+    text-transform: uppercase;
+    letter-spacing: .1rem;
+
+    background: #c31432;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #240b36, #c31432);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #240b36, #c31432); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    padding: 1rem 3rem ;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    opacity: 0;
+    animation: moverBanner 1s 0.9 forwards;
+    
+   /* padding-bottom: 1rem;
+    padding-left: 2rem;
+    padding-right: 2rem;*/
+
+}
+
+.banner button:hover{
+    opacity: 0.8;
+    color: #000;
+}
+
+@keyframes moverBanner{
+    0%{
+        transform: translateY(10rem) rotate(-30deg);
+    }
+    100%{
+        transform: translateY(0) translateY(0);
+        opacity: 2;
+    }
+}
